<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_location">Location</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_pref_location">Manage cities</string>
    <string name="title_activity_hourly_forecast">Hourly Forecast</string>
    <string name="content_authority" translatable="false">com.gabra.android.sunshine</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Milano</string>
    <string name="pref_latitude_key" translatable="false">Latitude</string>
    <string name="pref_latitude_default" translatable="false"> 45.464204</string>
    <string name="pref_longitude_key" translatable="false">Longitude</string>
    <string name="pref_longitude_default" translatable="false">9.189982</string>
    <string name="pref_place_id_key" translatable="false">PlaceID</string>
    <string name="pref_place_id_default" translatable="false">ChIJ53USP0nBhkcRjQ50xhPN_zw</string>
    <string name="pref_units_label">Temperature</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label" translatable="true">Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="pref_enable_geolocation_key" translatable="false">enable_geolocation</string>
    <string name="pref_enable_geolocation_label" translatable="true">Find me</string>
    <string name="pref_enable_geolocation_true" translatable="true">Enabled</string>
    <string name="pref_enable_geolocation_false" translatable="true">Not Enabled</string>
    <string name="pref_last_geolocation_time" translatable="false">last_geolocation_time</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date" translatable="false">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>
    <string name="format_temperature" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>
    <string name="wind_label">Wind</string>
    <string name="format_wind_kmh" translatable="false">
        <xliff:g id="speed">%1$1.1f</xliff:g> km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_wind_mph" translatable="false">
        <xliff:g id="speed">%1$1.1f</xliff:g> mph
        <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="pressure_label">Pressure</string>
    <string name="format_pressure" translatable="false">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>
    <string name="humidity_label">Humidity</string>
    <string name="format_humidity" translatable="false">
        <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504" translatable="false">Extreme Rain</string>
    <string name="condition_511" translatable="false">Freezing Rain</string>
    <string name="condition_520" translatable="false">Light Shower</string>
    <string name="condition_521" translatable="false">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531" translatable="false">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611" translatable="false">Sleet</string>
    <string name="condition_612" translatable="false">Shower Sleet</string>
    <string name="condition_615" translatable="false">Rain and Snow</string>
    <string name="condition_616" translatable="false">Rain and Snow</string>
    <string name="condition_620" translatable="false">Shower Snow</string>
    <string name="condition_621" translatable="false">Shower Snow</string>
    <string name="condition_622" translatable="false">Shower Snow</string>
    <string name="condition_701" translatable="false">Mist</string>
    <string name="condition_711" translatable="false">Smoke</string>
    <string name="condition_721" translatable="false">Haze</string>
    <string name="condition_731" translatable="false">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751" translatable="false">Sand</string>
    <string name="condition_761" translatable="false">Dust</string>
    <string name="condition_762" translatable="false">Volcanic Ash</string>
    <string name="condition_771" translatable="false">Squalls</string>
    <string name="condition_781" translatable="false">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_8001">Clear Day</string>
    <string name="condition_8002">Clear Night</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_8041">Partly Cloudy</string>
    <string name="condition_8042">Partly Cloudy</string>
    <string name="condition_900" translatable="false">Tornado</string>
    <string name="condition_901" translatable="false">Tropical Storm</string>
    <string name="condition_902" translatable="false">Hurricane</string>
    <string name="condition_903" translatable="false">Cold</string>
    <string name="condition_904" translatable="false">Hot</string>
    <string name="condition_905" translatable="false">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown" translatable="false">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <string name="condition_ds_unknown" translatable="false">Unknown (<xliff:g id="conditionId">%s</xliff:g>)</string>
    <string name="a11y_forecast" translatable="false">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon" translatable="false">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp" translatable="false">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp" translatable="false">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_temp" translatable="false">Temperature: <xliff:g id="temp">%1$s</xliff:g></string>
    <string name="a11y_humidity" translatable="false">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure" translatable="false">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind" translatable="false">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
    <string name="format_notification" translatable="false">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> -
        High:<xliff:g id="high">%2$s</xliff:g>
        Low:<xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="permission_rationale">Are you sure ?</string>
    <string name="permission_denied_explanation">Accept to enable localization</string>
    <string name="settings">Settings</string>
    <string name="no_geocoder_available" translatable="false">No geocoder available</string>
    <string name="address_found" translatable="false">Address Found</string>
    <string name="no_address_found" translatable="false">No Address Found</string>
    <string name="invalid_lat_long_used" translatable="false">Invalid latitude or longitude</string>
    <string name="service_not_available" translatable="false">No service. Check connection</string>
    <string name="navigation_drawer_closed" translatable="false">Settings closed</string>
    <string name="navigation_drawer_open" translatable="false">Settings open</string>
    <string name="hourly_day_label">DAY</string>
    <string name="hourly_label_hour">Time</string>
    <string name="hourly_forecast_label">Forecast</string>
    <string name="hourly_temp_label">Temp.</string>
    <string name="heavy_shower">Heavy Shower</string>
    <string name="cloudburst">Cloudburst</string>
    <string name="drizzling">Drizzling</string>
    <string name="light_precip_intensity">Light</string>
    <string name="moderate_precip_intensity">Moderate</string>
    <string name="heavy_precip_intensity">Heavy</string>
    <string name="intense_precip_intensity">Intense</string>
    <string name="shower_precip_intensity">Shower</string>
    <string name="no_precipitation" translatable="false">None</string>
    <string name="hourly_precip_label">Precip.</string>
    <string name="hourly_wind_label">Wind</string>
    <string name="pressure_upcase">PRESSURE</string>
    <string name="wind_upcase">WIND</string>
    <string name="humidity_upcase">HUMIDITY</string>
    <string name="evolution_label">EVOLUTION</string>
    <string name="button_day" translatable="false">day</string>
    <string name="current_label">CURRENT</string>
    <string name="add_city_label">Add City</string>
</resources>