<?xml version="1.0" encoding="utf-8"?>
    <!--
         Copyright (C) 2016 The Android Open Source Project
    
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
         You may obtain a copy of the License at
    
              http://www.apache.org/licenses/LICENSE-2.0
    
         Unless required by applicable law or agreed to in writing, software
         distributed under the License is distributed on an "AS IS" BASIS,
         WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         See the License for the specific language governing permissions and
         limitations under the License.
    -->

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:background="@color/colorPrimary"
android:orientation="vertical"
    android:background="#22000000"    >


<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:paddingLeft="@dimen/list_item_padding_horizontal"
    android:paddingRight="@dimen/list_item_padding_horizontal"
    android:id="@+id/constraintLayout"
    app:layout_constraintBottom_toTopOf="parent"
    >

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     - This Guideline divides the screen into a left half and a right half and is used to        -
     - anchor the views to the middle of the screen.                                             -
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->


    <android.support.constraint.Guideline
        android:id="@+id/horizontal_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="25dp"/>

    <LinearLayout
        android:id="@+id/sunset_animation"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/sunrise_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/imageview_sunset"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@mipmap/sun_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/sunrise_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/textViewPressureLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sunset_animation"
        tools:text="6:20" />

    <TextView
        android:id="@+id/sunset_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/sunrise_time"
        app:layout_constraintEnd_toEndOf="@+id/sunset_animation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sunrise_time"
        tools:text="18:30" />

    <TextView
        android:id="@+id/hourly_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/forecast_primary_text_size"
        app:layout_constraintBottom_toTopOf="@+id/hourly_weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Today, April 03" />

    <!-- Icon indicating weather condition -->
    <ImageView
        android:id="@+id/hourly_weather_icon"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/art_clouds" />

    <!-- Text that describes weather condition -->
    <TextView
        android:id="@+id/hourly_weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/hourly_date"
        app:layout_constraintTop_toBottomOf="@+id/hourly_date"
        tools:text="Rainy" />

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     - High temperature for today                                                                -
     -                                                                                           -
     - You may notice that the line android:fontFamily="sans-serif" is highlighted in yellow.    -
     - The reason for the highlighted line is that the fontFamily attribute is not available on  -
     - versions of Android before 16, and our minimum supported version of Android is 10. This   -
     - particular issue won't break the app, but you should note that this attribute will be     -
     - ignored on devices that run an Android version less than 16.                              -
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <TextView
        android:id="@+id/high_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/forecast_primary_text_size"
        app:layout_constraintLeft_toRightOf="@+id/hourly_weather_description"
        app:layout_constraintStart_toStartOf="@+id/hourly_weather_description"
        app:layout_constraintTop_toBottomOf="@+id/hourly_weather_description"
        tools:text="19\u00b0" />

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     - Low temperature for today                                                                 -
     -                                                                                           -
     - You may notice that the line android:fontFamily="sans-serif" is highlighted in yellow.    -
     - The reason for the highlighted line is that the fontFamily attribute is not available on  -
     - versions of Android before 16, and our minimum supported version of Android is 10. This   -
     - particular issue won't break the app, but you should note that this attribute will be     -
     - ignored on devices that run an Android version less than 16.                              -
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
    <TextView
        android:id="@+id/low_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/forecast_primary_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/high_temperature"
        app:layout_constraintLeft_toRightOf="@+id/high_temperature"
        tools:text="10\u00b0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/textViewHumidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_upcase"
        android:textColor="@color/white"
        android:textSize="@dimen/forecast_secondary_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/high_temperature"
        app:layout_constraintStart_toStartOf="@+id/high_temperature"
        app:layout_constraintTop_toBottomOf="@+id/high_temperature" />

    <TextView
        android:textSize="@dimen/forecast_secondary_text_size"
        android:id="@+id/hourlyTextViewHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        tools:text="70%"
        app:layout_constraintLeft_toRightOf="@+id/textViewHumidityLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/textViewHumidityLabel" />

    <TextView
        android:textSize="@dimen/forecast_secondary_text_size"
        android:id="@+id/textViewWindLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/wind_upcase"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumidityLabel"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewHumidityLabel" />

    <TextView
        android:textSize="@dimen/forecast_secondary_text_size"
        android:id="@+id/hourlyTextViewWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/hourlyTextViewHumidity"
        tools:text="70 Kmh"
        app:layout_constraintLeft_toRightOf="@+id/textViewWindLabel"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:textSize="@dimen/forecast_secondary_text_size"
        android:id="@+id/textViewPressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pressure_upcase"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWindLabel"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWindLabel" />

    <TextView
        android:textSize="@dimen/forecast_secondary_text_size"
        android:id="@+id/hourlyTextViewPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/hourlyTextViewWind"
        tools:text="1007 MB"
        app:layout_constraintLeft_toRightOf="@+id/textViewPressureLabel"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp" />





</android.support.constraint.ConstraintLayout>

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#44000022"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingEnd="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingStart="8dp"
    android:paddingTop="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/evolution_text_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/evolution_label"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hourly_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:focusable="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="Soleggiato fino a stasera, pioggia in nottata." />

    </LinearLayout>



</LinearLayout>

<View
    android:id="@+id/shadow"
    android:layout_width="match_parent"
    android:layout_height="10dp"
    android:background="@drawable/shadow_drawable"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />




</LinearLayout>
